--- a/styles/partials/_gameSection.scss
+++ b/styles/partials/_gameSection.scss
@@ -4,9 +4,7 @@
 }
 
 .pokeWrapper {
-  background-color: $pokemonRed;
-  border-style: groove;
-  padding: 1.5rem 4rem 3rem 4rem;
+  
   width: 420px;
   height: 690px;
   margin: 2rem 0;
@@ -23,6 +21,12 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
+
+  position: relative;
+  z-index: 10;
+  background-color: $pokemonRed;
+  border-style: groove;
+  padding: 1.5rem 4rem 3rem 4rem;
 }
 
 .screenBorder{
@@ -245,7 +249,7 @@ margin: 2rem 0;
     border: 5px ridge $pokemonRedShadow;
     // height: 345px;
     width: 420px;
-    z-index: -1;
+    z-index: 1;
     background-color: $pokemonBlueLight;
     transition-duration: 0.2s;
     bottom: 100%;
